# flutter_torrent

./: .metadata  README.md  README_NATIVE.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/ironfist/flutter_torrent/: FlutterTorrentPlugin.kt
lib/: flutter_torrent.dart  flutter_torrent_bindings_generated.dart
lib/src/: CMakeLists.txt  VcpkgAndroid.cmake  flutter_torrent.cc  flutter_torrent.h
scripts/: build_jni.ps1  regenerate_bindings.ps1
